# QT-Project

./: README.md  程序演示视频链接.md
Server/: CMakeLists.txt  CMakeLists.txt.user.01fb4e5  CMakeLists.txt.user.48c865c  CMakeLists.txt.user.c2f7f12  Database.h  database.cpp  main.cpp  server.cpp  server.h
untitled1/: CMakeLists.txt  CMakeLists.txt.user.48c865c  DoubleClickLineEdit.h  add.cpp  add.h  add.ui  change_avatar.cpp  change_avatar.h  change_back.cpp  change_back.h  change_name.cpp  change_name.h  chat_window.cpp  chat_window.h  chat_window.ui  dynamic.cpp  dynamic.h  dynamic.ui  frienditem.cpp  frienditem.h  frienditem.ui  friends.cpp  friends.h  friends.ui  groupitem.cpp  groupitem.h  groupitem.ui  groups.cpp  groups.h  groups.ui  image.qrc  main.cpp  maindow.cpp  mainwindow.h  messageitem.cpp  messageitem.h  messageitem.ui  my_tcpsocket.cpp  my_tcpsocket.h  pendingmessage.cpp  (+24 more)
